maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:68: error: not found: value isOverbaggle
  while (!isOverbaggle()) {
          ^